--- a/front-end/src/components/waste-management/contact-us/_ContactUs.style.scss
+++ b/front-end/src/components/waste-management/contact-us/_ContactUs.style.scss
@@ -27,6 +27,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        margin: 80px 0 80px;
         // display: grid;
         // align-items: center;
         // grid-template-columns: 1fr 200px;
