--- a/front-end/src/components/waste-management/marker/_Marker.styles.scss
+++ b/front-end/src/components/waste-management/marker/_Marker.styles.scss
@@ -54,6 +54,16 @@
     top: -61px;
 }
 
+.selectedMarker {
+  .markerImage {
+    width: 40px;
+    height: auto;
+    left: -20px;
+    top: -79.3px;
+    z-index: 10;
+  }
+}
+
 @keyframes fadeIn {
   0% { opacity: 0 }
   100% { opacity: 1 }
